--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saas-app",
+  "name": "ai-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.395.0",
+    "@clerk/nextjs": "^5.1.5",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
